--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wolfyscript.wolfyutilities</groupId>
     <artifactId>wolfyutilities-parent</artifactId>
-    <version>1.8.0.0</version>
+    <version>1.8-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -39,6 +39,7 @@
 
     <modules>
         <module>core</module>
+        <module>plugin_compatibility</module>
         <module>nmsutil</module>
         <module>wolfyutilities</module>
     </modules>
@@ -58,6 +59,17 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
         <!--Spigot API-->
         <dependency>
             <groupId>${spigot.groupId}</groupId>
@@ -166,28 +178,6 @@
             <artifactId>MagicAPI</artifactId>
             <version>9.3</version>
             <scope>provided</scope>
-        </dependency>
-        <!--Dependencies from private repo! They require credentials to access!-->
-        <dependency>
-            <groupId>io.th0rgal</groupId>
-            <artifactId>oraxen</artifactId>
-            <version>1.66.2</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>dev.lone</groupId>
-            <artifactId>itemsadder</artifactId>
-            <version>2.2.10</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>net.Indyuce</groupId>
-            <artifactId>mmoitems</artifactId>
-            <version>6.6.2</version>
-            <scope>provided</scope>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
