--- a/plugin_compatibility/itemsadder/pom.xml
+++ b/plugin_compatibility/itemsadder/pom.xml
@@ -29,13 +29,19 @@
 
     <artifactId>itemsadder</artifactId>
 
+    <repositories>
+        <repository>
+            <id>jitpack-repo</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>dev.lone</groupId>
-            <artifactId>itemsadder</artifactId>
-            <version>2.2.10</version>
+            <groupId>com.github.LoneDev6</groupId>
+            <artifactId>api-itemsadder</artifactId>
+            <version>2.4.21</version>
             <scope>provided</scope>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
