--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>0.10.2</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
         <!--Spigot API-->
         <dependency>
             <groupId>${spigot.groupId}</groupId>
