--- a/nmsutil/nmsutil-v1_17_R1_P0/pom.xml
+++ b/nmsutil/nmsutil-v1_17_R1_P0/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>nmsutil</artifactId>
         <groupId>com.wolfyscript.wolfyutilities</groupId>
-        <version>1.8-SNAPSHOT</version>
+        <version>2.16.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
