--- a/wolfyutilities/pom.xml
+++ b/wolfyutilities/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>wolfyutilities-parent</artifactId>
         <groupId>com.wolfyscript.wolfyutilities</groupId>
-        <version>1.8-SNAPSHOT</version>
+        <version>2.16.0.0</version>
     </parent>
     <dependencies>
         <dependency>
@@ -58,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-comp-artifact</artifactId>
+            <artifactId>plugin-compatibility-artifact</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
