--- a/wolfyutilities/pom.xml
+++ b/wolfyutilities/pom.xml
@@ -44,6 +44,12 @@
             <version>0.10.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- NMS module -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -107,6 +113,10 @@
                                     <pattern>javassist</pattern>
                                     <shadedPattern>me.wolfyscript.lib.javassist</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>com.fasterxml.jackson</pattern>
+                                    <shadedPattern>me.wolfyscript.lib.com.fasterxml.jackson</shadedPattern>
+                                </relocation>
                             </relocations>
                             <shadeSourcesContent>true</shadeSourcesContent>
                             <shadedArtifactAttached>false</shadedArtifactAttached>
@@ -114,6 +124,7 @@
                                 <includes>
                                     <include>com.wolfyscript.wolfyutilities</include>
                                     <include>org.bstats</include>
+                                    <include>com.fasterxml.jackson.core</include>
                                     <include>org.reflections</include>
                                     <include>org.javassist</include>
                                 </includes>
