--- a/wolfyutilities/pom.xml
+++ b/wolfyutilities/pom.xml
@@ -50,6 +50,12 @@
             <version>2.13.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.11.1</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- NMS module -->
         <dependency>
             <groupId>${project.groupId}</groupId>
