--- a/plugin-compatibility-module/pom.xml
+++ b/plugin-compatibility-module/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>wolfyutilities-parent</artifactId>
         <groupId>com.wolfyscript.wolfyutilities</groupId>
-        <version>3.16.0.0</version>
+        <version>3.16-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
