--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,20 @@
         <!-- Adventure ChatComponent API -->
         <dependency>
             <groupId>net.kyori</groupId>
+            <artifactId>adventure-api</artifactId>
+            <version>4.9.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
             <artifactId>adventure-platform-bukkit</artifactId>
             <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-minimessage</artifactId>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!-- LWC by Brokkonaut for entity locking -->
