Fixed src folder of eco module

--- a/plugin-compatibility-module/plugin-compatibility-artifact/pom.xml
+++ b/plugin-compatibility-module/plugin-compatibility-artifact/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>mmoitems</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>eco</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
