--- a/nmsutil/nmsutil-v1_16_R2/pom.xml
+++ b/nmsutil/nmsutil-v1_16_R2/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>nmsutil</artifactId>
         <groupId>com.wolfyscript.wolfyutilities</groupId>
-        <version>3.16-SNAPSHOT</version>
+        <version>3.16.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
