--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wolfyscript.wolfyutilities</groupId>
     <artifactId>wolfyutilities-parent</artifactId>
-    <version>3.16.3.1</version>
+    <version>3.16-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
