--- a/plugin-compatibility-module/itemsadder/pom.xml
+++ b/plugin-compatibility-module/itemsadder/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>plugin-compatibility-module</artifactId>
         <groupId>com.wolfyscript.wolfyutilities</groupId>
-        <version>3.16-SNAPSHOT</version>
+        <version>3.16.3.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
