Added separate MythicMobs item ref for MM 5.0

--- a/plugin-compatibility-module/mythicmobs/pom.xml
+++ b/plugin-compatibility-module/mythicmobs/pom.xml
@@ -48,6 +48,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>io.lumine.mythic.mythicmobs</groupId>
+            <artifactId>MythicMobs-Bukkit</artifactId>
+            <version>5.0.1</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.comphenix.protocol</groupId>
+                    <artifactId>ProtocolLib</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
