Move all platform independent code into the common implementation
* Add Platform class and package that includes a wrapper for platform specific utils, such as rendering stacks into the Inventory, or Schedulers.
* Components are completely platform independent, reducing the implementation code for each platform.
* The adapters package is a sub-package of the platform package now

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@
 #     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-group="com.wolfyscript.wolfyutils"
-version="5.0-alpha.1-SNAPSHOT"
-apiVersion="5.0-SNAPSHOT"
+group=com.wolfyscript.wolfyutils
+version=5.0-alpha.1-SNAPSHOT
+apiVersion=5.0-SNAPSHOT
