--- a/spigot/core/src/main/resources/paper-plugin.yml
+++ b/spigot/core/src/main/resources/paper-plugin.yml
@@ -8,9 +8,9 @@ load: STARTUP
 libraries:
   - "com.google.inject:guice:5.1.0"
   - "org.apache.commons:commons-lang3:3.12.0"
-  - "it.unimi.dsi:fastutil:8.5.6"
-  - "${libs.guice.get()}"
-  - "${libs.kotlin.stdlib.sdk.get()}"
+  - "${libs.it.unimi.dsi.fastutil.get()}"
+  - "${libs.com.google.inject.guice.get()}"
+  - "${libs.org.jetbrains.kotlin.stdlib.get()}"
 
 dependencies:
   - name: Magic
