Update guice to support java 21

--- a/examples/single-platform/spigot/src/main/resources/plugin.yml
+++ b/examples/single-platform/spigot/src/main/resources/plugin.yml
@@ -14,3 +14,4 @@ libraries:
   - "${libs.net.kyori.adventure.text.minimessage.get()}"
   - "${libs.net.kyori.adventure.platform.bukkit.get()}"
   - "${libs.jackson.databind.get()}"
+  - "${libs.com.google.inject.guice.get()}"
