feat: standalone plugin to load viewportl module into scafall
This moves all the viewportl startup away from requiring to be shaded to a standalone plugin.
 The plugin loads the platform specific implementation of viewportl into scafall, so that it has access to scafalls internal implementation.

--- a/spigot/loader/src/main/resources/plugin.yml
+++ b/spigot/loader/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-name: Viewportl
+name: viewportl
 version: '${version}'
 main: com.wolfyscript.viewportl.loader.SpigotViewportlLoader
-api-version: 1.21.4
+api-version: 1.21
 authors: [ WolfyScript ]
 load: STARTUP
 
 depend:
-  - Scafall
+  - scafall
