--- a/examples/single-platform/spigot-plugin/src/main/resources/plugin.yml
+++ b/examples/single-platform/spigot-plugin/src/main/resources/plugin.yml
@@ -5,15 +5,4 @@ api-version: 1.21
 authors: [ SomeAuthor ]
 load: STARTUP
 
-depend: [ NBTAPI ]
-
-libraries:
-  - "${libs.org.jetbrains.kotlin.stdlib.get()}" # There are other ways to include kotlin on the server (like a separate plugin), but here we just include it.
-  - "${libs.org.jetbrains.annotations.get()}"
-  - "${libs.org.apache.commons.commons.lang3.get()}"
-  - "${libs.org.reflections.reflections.get()}"
-  - "${libs.net.kyori.adventure.api.get()}"
-  - "${libs.net.kyori.adventure.text.minimessage.get()}"
-  - "${libs.net.kyori.adventure.platform.bukkit.get()}"
-  - "${libs.jackson.databind.get()}"
-  - "${libs.com.google.inject.guice.get()}"
+depend: [ NBTAPI, scafall, viewportl ]
