--- a/gradle.properties
+++ b/gradle.properties
@@ -19,17 +19,7 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
+jvm_target=21
+
 group=com.wolfyscript.viewportl
 version=alpha0.0.1.0-SNAPSHOT
-
-# Fabric
-fabric_version=0.119.5+1.21.5
-fabric_loader_version=0.16.10
-
-# Forge
-forge_version=55.0.1
-forge_loader_version_range=[55,)
-
-# NeoForge
-neoforge_version=21.5.4-beta
-neoforge_loader_version_range=[4,)
